--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "swiper": "^11.2.8"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
